--- a/about.html
+++ b/about.html
@@ -64,9 +64,9 @@
     <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg flex items-center gap-6">
       <img src="assets/gruender1.jpg" alt="Gründer 1" class="w-24 h-24 rounded-full object-cover">
       <div>
-        <h3 class="text-xl font-bold text-purple-600">Max Mustermann</h3>
+        <h3 class="text-xl font-bold text-purple-600">Ilias Aoun</h3>
         <p class="text-gray-700 dark:text-gray-300">CEO & Hardware-Spezialist</p>
-        <p class="text-sm text-gray-500 dark:text-gray-400 mt-2">Experte für PC-Builds und Gaming-Systeme mit über 10 Jahren Erfahrung.</p>
+        <p class="text-sm text-gray-500 dark:text-gray-400 mt-2">Experte für PC-Builds und Gaming-Systeme mit über 3 Jahren Erfahrung.</p>
       </div>
     </div>
 
@@ -74,9 +74,9 @@
     <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg flex items-center gap-6">
       <img src="assets/gruender2.jpg" alt="Gründer 2" class="w-24 h-24 rounded-full object-cover">
       <div>
-        <h3 class="text-xl font-bold text-purple-600">Anna Beispiel</h3>
-        <p class="text-gray-700 dark:text-gray-300">CTO & Software-Expertin</p>
-        <p class="text-sm text-gray-500 dark:text-gray-400 mt-2">Spezialisiert auf IT-Support, Netzwerke und Softwarelösungen.</p>
+        <h3 class="text-xl font-bold text-purple-600">Dennis Tews</h3>
+        <p class="text-gray-700 dark:text-gray-300">CTO & Hardware-Spezialist</p>
+        <p class="text-sm text-gray-500 dark:text-gray-400 mt-2">Experte für PC-Builds und Gaming-Systeme mit über 4 Jahren Erfahrung.</p>
       </div>
     </div>
 
