--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
     
     <!-- Gründer 1 -->
     <div class="bg-white dark:bg-gray-800 p-6 rounded-2xl shadow-lg flex items-center gap-6">
-      <img src="assets/gruender1.jpg" alt="Gründer 1" class="w-24 h-24 rounded-full object-cover">
+      <img src="Bilder/WhatsApp Bild 2025-08-21 um 17.39.14_744aea9a.jpg" alt="Gründer 1" class="w-24 h-24 rounded-full object-cover">
       <div>
         <h3 class="text-xl font-bold text-purple-600">Ilias Aoun</h3>
         <p class="text-gray-700 dark:text-gray-300">CEO & Hardware-Spezialist</p>
