--- a/index.html
+++ b/index.html
@@ -85,7 +85,15 @@
 
   <p id="status-desktop" class="text-sm text-gray-600 dark:text-gray-300">Nicht eingeloggt</p>
 </div>
+  
+ <button id="menuToggle" class="md:hidden flex flex-col gap-1 p-2 rounded hover:bg-gray-200 dark:hover:bg-gray-700">
+    <span class="w-6 h-0.5 bg-gray-800 dark:bg-gray-200"></span>
+    <span class="w-6 h-0.5 bg-gray-800 dark:bg-gray-200"></span>
+    <span class="w-6 h-0.5 bg-gray-800 dark:bg-gray-200"></span>
+  </button>
 
+
+  
 </nav>
 
 
