--- a/index.html
+++ b/index.html
@@ -270,14 +270,14 @@
       updateIcon();
     });
 
-    // Mobile Menü Toggle
-    const toggle = document.getElementById('menuToggle');
-    const menu = document.getElementById('menu');
-    toggle.addEventListener('click', () => {
-      menu.classList.toggle('hidden');
-      menu.classList.toggle('flex');
-      menu.classList.toggle('flex-col');
-    });
+   // Mobile Menü öffnen/schließen
+const toggle = document.getElementById('menuToggle');
+const mobileMenu = document.getElementById('mobileMenu');
+
+toggle.addEventListener('click', () => {
+  mobileMenu.classList.toggle('hidden');
+});
+
   </script>
 </body>
 </html>
