--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </nav>
 
 
-
+ <!-- Mobile login-->
 <ul id="mobileMenu" class="hidden flex-col gap-4 font-medium p-6 bg-white dark:bg-gray-800 rounded-xl shadow-xl absolute top-20 right-6 z-50">
   <li><a href="index.html" class="hover:text-purple-500 transition">Home</a></li>
   <li><a href="reparaturen.html" class="hover:text-purple-500 transition">Reparaturen</a></li>
@@ -105,26 +105,7 @@
   <li><a href="about.html" class="hover:text-purple-500 transition">Über uns</a></li>
   <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>
 
-  <!-- Login nur für Mobile -->
-  <li>
-    <div class="flex flex-col gap-2">
-      <button id="google-login-mobile" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-500 transition">
-        Mit Google anmelden
-      </button>
-      <button id="logout-mobile" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-500 transition hidden">
-        Abmelden
-      </button>
-      <p id="status-mobile" class="text-sm text-gray-600 dark:text-gray-300">Nicht eingeloggt</p>
-    </div>
-  </li>
-     <li>
-      <a href="https://discord.gg/eyevVpHH5V" target="_blank"
-         class="flex items-center gap-3 px-0.5 py-0.5 rounded-xl
-                bg-gradient-to-br from-indigo-900 via-indigo-800 to-indigo-900
-                text-indigo-300 hover:text-white
-                border border-indigo-500/30 hover:border-indigo-400/60
-                shadow-md hover:shadow-indigo-500/30
-                transition-all duration-300">
+ 
        
         <!-- Discord Icon -->
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"
@@ -148,7 +129,26 @@
         </svg>
       </a>
     </li>
-  
+   <!-- Login nur für Mobile -->
+  <li>
+    <div class="flex flex-col gap-2">
+      <button id="google-login-mobile" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-500 transition">
+        Mit Google anmelden
+      </button>
+      <button id="logout-mobile" class="bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-500 transition hidden">
+        Abmelden
+      </button>
+      <p id="status-mobile" class="text-sm text-gray-600 dark:text-gray-300">Nicht eingeloggt</p>
+    </div>
+  </li>
+     <li>
+      <a href="https://discord.gg/eyevVpHH5V" target="_blank"
+         class="flex items-center gap-3 px-0.5 py-0.5 rounded-xl
+                bg-gradient-to-br from-indigo-900 via-indigo-800 to-indigo-900
+                text-indigo-300 hover:text-white
+                border border-indigo-500/30 hover:border-indigo-400/60
+                shadow-md hover:shadow-indigo-500/30
+                transition-all duration-300">
 </ul>
 
 <script type="module">
