--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
       </a>
     </li>
    <!-- Login nur für Mobile -->
-  <li>
-    <div class="flex flex-col gap-2">
+  <li class="mt-4 >
+     <div class="flex flex-col gap-2">
       <button id="google-login-mobile" class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-500 transition">
         Mit Google anmelden
       </button>
