--- a/gaming-pcs.html
+++ b/gaming-pcs.html
@@ -154,6 +154,86 @@
   <li><a href="contact.html" class="hover:text-purple-500 transition">Kontakt</a></li>
 </ul>
 
+<script type="module">
+  // Firebase SDKs importieren
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+  import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } 
+    from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+
+  // Dein Firebase Config (aus Console kopieren!)
+  const firebaseConfig = {
+    apiKey: "DEIN_API_KEY",
+    authDomain: "DEIN_PROJEKT.firebaseapp.com",
+    projectId: "DEIN_PROJEKT_ID",
+    storageBucket: "DEIN_PROJEKT.appspot.com",
+    messagingSenderId: "DEIN_ID",
+    appId: "DEINE_APP_ID"
+  };
+
+  // Initialisieren
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const provider = new GoogleAuthProvider();
+
+  // Login mit Google
+  document.getElementById("google-login").addEventListener("click", async () => {
+    try {
+      const result = await signInWithPopup(auth, provider);
+      console.log("Eingeloggt:", result.user);
+    } catch (error) {
+      console.error(error);
+    }
+  });
+
+  // Logout
+  document.getElementById("logout").addEventListener("click", async () => {
+    await signOut(auth);
+    console.log("Abgemeldet");
+  });
+
+  // Beobachten ob jemand eingeloggt ist
+  onAuthStateChanged(auth, user => {
+    if (user) {
+      document.getElementById("status").textContent = "Hallo " + user.displayName;
+    } else {
+      document.getElementById("status").textContent = "Nicht eingeloggt";
+    }
+  });
+
+  
+ 
+
+  // Aktive Seite markieren
+  (function () {
+    function normalizePath(input) {
+      try {
+        const url = new URL(input, window.location.href);
+        let path = url.pathname;
+        if (path.endsWith("/")) path += "index.html";
+        const file = path.split("/").pop();
+        return file || "index.html";
+      } catch (e) {
+        let s = (input || "").split("#")[0].split("?")[0];
+        if (s.endsWith("/")) s += "index.html";
+        return s.split("/").pop() || "index.html";
+      }
+    }
+
+    const current = normalizePath(window.location.href);
+
+    document.querySelectorAll("nav a[href]").forEach(a => {
+      const target = normalizePath(a.getAttribute("href"));
+      if (target === current) {
+        a.classList.add("text-purple-500", "font-bold");
+        a.setAttribute("aria-current", "page");
+      } else {
+        a.classList.remove("text-purple-500", "font-bold");
+        a.removeAttribute("aria-current");
+      }
+    });
+  })();
+</script>
+  
 <!-- Hero -->
 <section class="text-center py-20 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
   <h1 class="text-4xl font-extrabold mb-4">Gaming PCs</h1>
