--- a/reparaturen.html
+++ b/reparaturen.html
@@ -227,37 +227,7 @@
       }
     });
   })();
-</script>
 
-
-
-
-  <!-- Hero -->
-  <section class="flex flex-col items-center justify-center text-center py-24 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
-    <h2 data-aos="fade-down" class="text-5xl font-extrabold mb-4">Reparatur</h2>
-    <p data-aos="fade-up" data-aos-delay="200" class="max-w-2xl text-lg opacity-90">
-      Wir reparieren PCs zuverlässig & schnell.
-    </p>
-  </section>
-
-  <!-- Reparaturarten -->
-  <section class="flex justify-center p-12">
-  <div data-aos="fade-right" 
-       class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 
-              hover:shadow-2xl hover:-translate-y-2 transition transform duration-300 w-full max-w-sm">
-    <img src="Bilder/computerbutler_pc_erweiterung_small-8ac0c313.jpeg" alt="PC Reparatur" class="rounded-lg mb-4">
-    <h3 class="text-xl font-bold mb-2 text-purple-600">PC Reparatur</h3>
-    <p>Hardware- & Software-Probleme schnell behoben.</p>
-  </div>
-</section>
-
-
-  <!-- Footer -->
-  <footer class="text-center p-6 bg-gray-200 dark:bg-gray-700 mt-12">
-    <p>© 2025 A&T Tech – Alle Rechte vorbehalten.</p>
-  </footer>
-
- <script>
     // AOS Init
     AOS.init({ duration: 1000, once: true });
 
@@ -291,14 +261,43 @@
       updateIcon();
     });
 
-    // Mobile Menü Toggle
-    const toggle = document.getElementById('menuToggle');
-    const menu = document.getElementById('menu');
-    toggle.addEventListener('click', () => {
-      menu.classList.toggle('hidden');
-      menu.classList.toggle('flex');
-      menu.classList.toggle('flex-col');
-    });
-  </script>
+   // Mobile Menü öffnen/schließen
+const toggle = document.getElementById('menuToggle');
+const mobileMenu = document.getElementById('mobileMenu');
+
+toggle.addEventListener('click', () => {
+  mobileMenu.classList.toggle('hidden');
+});
+  
+</script>
+
+
+
+  <!-- Hero -->
+  <section class="flex flex-col items-center justify-center text-center py-24 bg-gradient-to-r from-purple-600 to-indigo-600 text-white">
+    <h2 data-aos="fade-down" class="text-5xl font-extrabold mb-4">Reparatur</h2>
+    <p data-aos="fade-up" data-aos-delay="200" class="max-w-2xl text-lg opacity-90">
+      Wir reparieren PCs zuverlässig & schnell.
+    </p>
+  </section>
+
+  <!-- Reparaturarten -->
+  <section class="flex justify-center p-12">
+  <div data-aos="fade-right" 
+       class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-6 
+              hover:shadow-2xl hover:-translate-y-2 transition transform duration-300 w-full max-w-sm">
+    <img src="Bilder/computerbutler_pc_erweiterung_small-8ac0c313.jpeg" alt="PC Reparatur" class="rounded-lg mb-4">
+    <h3 class="text-xl font-bold mb-2 text-purple-600">PC Reparatur</h3>
+    <p>Hardware- & Software-Probleme schnell behoben.</p>
+  </div>
+</section>
+
+
+  <!-- Footer -->
+  <footer class="text-center p-6 bg-gray-200 dark:bg-gray-700 mt-12">
+    <p>© 2025 A&T Tech – Alle Rechte vorbehalten.</p>
+  </footer>
+
+ 
 </body>
 </html>
